--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://fintory.join.com/jobs/470766-front-end-developer-m-f-d'>Job @ fintory (Duisburg): Front-end developer (m/f/d) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://simscale.join.com/jobs/468441-senior-frontend-developer-m-f-d'>Job @ SimScale (Munich): Senior Frontend Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich Munich</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bonify.join.com/jobs/470018-frontend-developer'>Job @ bonify (Berlin): Frontend Developer | JOIN</a></h5> 
+<h5><a href='https://bonify.join.com/jobs/470018-frontend-developer'>Job @ bonify (Berlin): Frontend Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -184,7 +188,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/qlik/job/o9ufbfwN'>Qlik Careers - Frontend Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/qlik/job/o9ufbfwN'>Qlik Careers - Frontend Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -220,7 +224,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -282,7 +286,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698469559-engineering-manager-front-end-core-xp'>Omio Engineering Manager - Front End - Core XP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698469559-engineering-manager-front-end-core-xp'>Omio Engineering Manager - Front End - Core XP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -294,7 +298,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698474668-frontend-engineer-habitaclia'>Adevinta Frontend Engineer Habitaclia | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698474668-frontend-engineer-habitaclia'>Adevinta Frontend Engineer Habitaclia | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -306,7 +310,7 @@
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1939266'>Job Application for Frontend Developer at Dept</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1939266'>Job Application for Frontend Developer at Dept</a></h5> 
 <p><span class="badge badge-light">Amsterdam Rotterdam  Amsterdam Rotterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -350,7 +354,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +362,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
+<h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +382,7 @@
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -444,12 +448,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/castlegroup/job/ozGrbfwB'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://funda.recruitee.com/l/nl/o/frontend-developer-1'>
-      Front-end Developer - Funda
-    </a></h5> 
-<p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
