--- a/machine.html
+++ b/machine.html
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -190,7 +190,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shiru/cd135ef8-87db-49b9-a105-1eef8146ca6c'>Shiru - (Senior) Computational biologist/machine learning researcher</a></h5> 
+<h5><a href='https://jobs.lever.co/shiru/cd135ef8-87db-49b9-a105-1eef8146ca6c'>Shiru - (Senior) Computational biologist/machine learning researcher</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -243,7 +243,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -255,7 +255,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
+<h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -299,13 +299,13 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
 healthcare?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -339,7 +339,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -392,7 +392,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
 <hr/>
-<h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
